try-out/backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: gcr.io/google_containers/echoserver:1.9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
  - port: 9080
    targetPort: 8080
    protocol: TCP
  selector:
    app: echoserver
